# demo-skill-agent

./: .env.example  .gitignore  README.md  api.py  app.py  app_gradio.py  demo_agent.py  demo_generation.py  demo_runtime.py  pyproject.toml  spec.md
docker/: Dockerfile
docs/: architecture.md  limitations.md  policy-ui.vi.md  policy.md  references.md  schema.md  skill.md  status.md  validation.md
policies/: mvp-safe.yaml
scripts/: generate_skill_fixtures.py
skills/broken-skill/: SKILL.md
skills/broken-skill/scripts/: run.py
skills/meals-tracker/: SKILL.md  meals_data.json
skills/meals-tracker/scripts/: run.py
skills/note-searcher/: SKILL.md
skills/obsidian-crud/: SKILL.md
skills/obsidian-note-writer/: SKILL.md
skills/scrape-links/: SKILL.md
skills/scrape-links/scripts/: run.py
skills/skill-generator/: SKILL.md
skills/url-to-markdown/: SKILL.md
src/skill_agent/: agent.py  clarifier.py  generator.py  logging_utils.py  loop.py  models.py  pipeline.py  process.py  prompt_loader.py  provider.py  publisher.py  sanitize.py  tool.py  validator.py
tests/: conftest.py  test_agent.py  test_app_gradio.py  test_builder_agents.py  test_clarifier.py  test_demo_generation.py  test_engine.py  test_generator.py  test_interaction_gateway.py  test_loop.py  test_memory.py  test_memory_retained.py  test_models.py  test_notifications.py  test_openai_provider.py  test_pipeline.py  test_policy.py  test_provider.py  test_publisher.py  test_runtime.py  test_sandbox.py  test_validation_policy.py  test_validator.py  test_workflow_draft.py
tests/fixtures/: summary.json
(+87 files in other folders)
